doc updated: insert sources

--- a/doc/ada-extfile-access.tex
+++ b/doc/ada-extfile-access.tex
@@ -154,27 +154,33 @@ type File_Mode is (In_File, Out_File, Append_File);
 
 \section{Source insert example}
 
-\subsection{fitsfile}
+\subsection{FITS\_IO}
 
-Specification fitsfile.ads
-\inputminted{ada}{../fitsfile.ads}
+Specification fits\_io.ads
+\inputminted{ada}{../fits_io.ads}
 
-Body fitsfile.adb
-\inputminted{ada}{../fitsfile.adb}
+%Body fits_io.adb
+%\inputminted{ada}{../fits_io.adb}
+
+Specification hdu.ads
+\inputminted{ada}{../hdu.ads}
+
+Body hdu.adb
+\inputminted{ada}{../hdu.adb}
+
 
 \subsection{commands}
 
-Specification fitsfile.ads
+Specification commands.ads
 \inputminted{ada}{../commands.ads}
 
-Body fitsfile.adb
+Body commands.adb
 \inputminted{ada}{../commands.adb}
 
-\subsection{main}
+%\subsection{main}
 
-Specification fitsfile.ads
-\inputminted{ada}{../main.adb}
-
+%Body main.adb
+%\inputminted{ada}{../main.adb}
 
 \end{document}
 
