Cosmetic, move notes on File_Mode & write behaviour from code to doc.

--- a/doc/ada-extfile-access.tex
+++ b/doc/ada-extfile-access.tex
@@ -127,6 +127,18 @@ C-streams define following modes for file open:
 
 
 
+\subsection{FITS\_IO file modes and write behaviour}
+
+\begin{verbatim}
+-- FIXME reconsider Open/Create + File_mode rules / add to doc:
+-- valid combinations:
+-- Open   : In Inout Append
+-- Create : Append
+-- Write behaviour:
+-- Open   + Out_File    -> Write(...,HDU_Num) truncates FITS-File and appends Header to the truncated end
+-- Open   + Inout_File  -> Write(...,HDU_Num) overwrites HDU if sizes match (sizes counted in Blocks = 2880bytes)
+-- Open/Create + Append -> Write() (call without HDU_Num ) appends to the end
+\end{verbatim}
 
 \subsection{Buffering}
 \label{sec:webbrowser}
