Doc: filename adjust

--- a/doc/ada-extfile-access.tex
+++ b/doc/ada-extfile-access.tex
@@ -448,26 +448,29 @@ and order of bytes in word.
 
 \subsection{FITS\_IO}
 
-Specification fits\_io.ads
-\inputminted{ada}{../fits_io.ads}
+Specification FITS
+\inputminted{ada}{../lib/src/fits.ads}
 
-Body fits\_io.adb
-\inputminted{ada}{../fits_io.adb}
+Specification File
+\inputminted{ada}{../lib/src/fits-file.ads}
 
-Specification hdu.ads
-\inputminted{ada}{../hdu.ads}
+Specification Header
+\inputminted{ada}{../lib/src/fits-header.ads}
 
-Body hdu.adb
-\inputminted{ada}{../hdu.adb}
+Specification Data
+\inputminted{ada}{../lib/src/fits-data.ads}
+
+Parser specs
+\inputminted{ada}{../lib/src/fits-parser.ads}
 
 
-\subsection{commands}
+%\subsection{commands}
 
-Specification commands.ads
-\inputminted{ada}{../commands.ads}
+%Specification commands.ads
+%\inputminted{ada}{../commands.ads}
 
-Body commands.adb
-\inputminted{ada}{../commands.adb}
+%Body commands.adb
+%\inputminted{ada}{../commands.adb}
 
 %\subsection{main}
 
