Doc: minor modif

--- a/doc/FITSlib.tex
+++ b/doc/FITSlib.tex
@@ -42,7 +42,7 @@ It is based on Stream\_IO.
 \subsection{Specification Data}
 \inputminted{ada}{../lib/src/fits-data.ads}
 
-\subsection{Parser specs}
+\subsection{Specification Parser}
 \inputminted{ada}{../lib/src/fits-parser.ads}
 
 
