--- a/algorithm-dataaccess/README.tex
+++ b/algorithm-dataaccess/README.tex
@@ -7,5 +7,24 @@ Implements:
 - Data Block definition, generic and so extendable to new types (like 128 bit Integer/Float)
 - 'Read 'Write Block attribs (2880bytes) of any BITPIX type
 - DataBlock position calculations in HDU and File
-- for BITPIX-Integer types: scaling values from Array-values to Physical-values
+- Physical-Array value conversion: for BITPIX-Integer types: scaling values from Array-values to Physical-values
 
+___________________________________________
+Physical <-> Array value conversion:
+
+if one of BZERO,BSCALE present in Header other not, use default for the missing key
+
+BITPIX   	BZERO 	BSCALE		Note
+ >0 (Int)	none	none		implement nothing, user uses raw values directly
+ >0 (Int)	Tab11	1.0		phys is Integer as given in Tab11; implement Unsigned - Signed conversion : This is special case of the next 2! No extra implementation?
+ >0 (xInt8..32)	yes	yes		phys in Float32	by Eq(3) <-- FIXME as below: how does accuracy of Int32 relate to Float32?
+ >0 (Int64)	yes	yes		phys in Float64	by Eq(3) <-- FIXME check! is this correct? INt64 really implies Float64?? probably not
+
+ <0 (FloatXX)	none	none		implement nothing, user use raw
+ <0 (Float32)	yes	yes		phys is Float32 use Eq(3)
+ <0 (Float64)	yes	yes		phys is Float64 use Eq(3)
+
+E.g. implement:
+1, for all integer types Signed-Unsigned conversions
+2a, for all integer-float combinations: Eq(3) as generic: BSCALE BZERO-> Float types,  BLANK & Data -> Integer types
+2b, for     float  -float combinations: Eq(3) as generic: BSCALE BZERO-> Float types,  Data -> Float types
