Adds reading floats with NaN check only (no scaling)

--- a/lib/src/data/notes-pipeline.tex
+++ b/lib/src/data/notes-pipeline.tex
@@ -3,7 +3,7 @@
 BZERO BSCALE defaults to 0.0 1.0 if not given in Header -> e.g. ALLWAYS available
 				
 Integers:			BLANK	BZERO BSCALE		func name
-raw => flipSign		     flipBLANK	Tab11			I? SignConverted_Value
+raw => flipSign		     flipBLANK	Tab11			I SignConverted_Value
 raw => checkI -> conv		  y	0.0 1.0  		opt Checked_TypeConverted_Value
 raw => conv		  	  n	0.0 1.0  		opt TypeConverted_Value
 raw => checkI -> conv -> scale	  y 	none of above		I Checked_Scaled_Value
