Rename func for integers sign conversion

--- a/lib/src/data/notes-pipeline.tex
+++ b/lib/src/data/notes-pipeline.tex
@@ -11,7 +11,7 @@ raw => conv -> scale		  n	none of above		I Scaled_Value
 
 
 Floats:
-raw => checkF			  -	0.0 1.0			? Checked_Value
+raw => checkF			  -	0.0 1.0			I Checked_Value
 raw => checkF -> conv -> scale	  -	not the above		I Checked_Scaled_Value
 
 
