--- a/lib/src/data/notes-pipeline.tex
+++ b/lib/src/data/notes-pipeline.tex
@@ -3,16 +3,16 @@
 BZERO BSCALE defaults to 0.0 1.0 if not given in Header -> e.g. ALLWAYS available
 				
 Integers:			BLANK	BZERO BSCALE		func name
-raw => flipSign		     flipBLANK	Tab11			I SignConverted_Value
+raw => flipSign		     flipBLANK	Tab11			SignConverted_Value
 raw => checkI -> conv		  y	0.0 1.0  		opt Checked_TypeConverted_Value
 raw => conv		  	  n	0.0 1.0  		opt TypeConverted_Value
-raw => checkI -> conv -> scale	  y 	none of above		I Checked_Scaled_Value
-raw => conv -> scale		  n	none of above		I Scaled_Value
+raw => checkI -> conv -> scale	  y 	none of above		Checked_Scaled_Value
+raw => conv -> scale		  n	none of above		Scaled_Value
 
 
 Floats:
-raw => checkF			  -	0.0 1.0			I Checked_Value
-raw => checkF -> conv -> scale	  -	not the above		I Checked_Scaled_Value
+raw => checkF			  -	0.0 1.0			Checked_Value
+raw => checkF -> conv -> scale	  -	not the above		Checked_Scaled_Value
 
 
 
