Doc update with list of algorithms

--- a/doc/FITSlib.tex
+++ b/doc/FITSlib.tex
@@ -9,7 +9,7 @@
 %\approvedby{-}
               
 \usepackage[top=5.2cm, left=2cm, right=2cm, bottom=2cm, headheight=2.6cm]{geometry}%showframe
-\usepackage{minted}
+%\usepackage{minted}
 \usepackage{graphicx}
 %\usepackage{listings}
 
@@ -28,22 +28,37 @@
 
 It is based on Stream\_IO.
 
+\section{Algorithms}
+
+\subsection{Header read write}
+\subsubsection{Parser}
+\subsubsection{Internal model and write}
+
+\subsection{Data access}
+\subsubsection{Endianness}
+\subsubsection{Data type conversions}
+
+\subsection{External interface(s)}
+\subsubsection{NCube}
+
+
+
 \section{Source insert example}
 
 \subsection{Specification FITS}
-\inputminted{ada}{../lib/src/fits.ads}
+%\inputminted{ada}{../lib/src/fits.ads}
 
 \subsection{Specification File}
-\inputminted{ada}{../lib/src/fits-file.ads}
+%\inputminted{ada}{../lib/src/fits-file.ads}
 
 \subsection{Specification Header}
-\inputminted{ada}{../lib/src/fits-header.ads}
+%\inputminted{ada}{../lib/src/fits-header.ads}
 
 \subsection{Specification Data}
-\inputminted{ada}{../lib/src/fits-data.ads}
+%\inputminted{ada}{../lib/src/fits-data.ads}
 
 \subsection{Specification Parser}
-\inputminted{ada}{../lib/src/fits-parser.ads}
+%\inputminted{ada}{../lib/src/fits-parser.ads}
 
 
 %\subsection{commands}
