Doc: minor change

--- a/doc/FITSlib.tex
+++ b/doc/FITSlib.tex
@@ -26,9 +26,12 @@
 
 \section{FITS library}
 
-It is based on Stream\_IO.
 
 \section{Algorithms}
+
+\subsection{File}
+It is based on Stream\_IO ...
+\subsubsection{Positioning to HDU}
 
 \subsection{Header read write}
 \subsubsection{Parser}
@@ -37,7 +40,7 @@ It is based on Stream\_IO.
 \subsection{Data access}
 \subsubsection{Endianness}
 \subsubsection{Data type conversions}
-\subsubsection{Offset calcualtions}
+\subsubsection{Positioning within DataUnit}
 
 \subsection{External interface(s)}
 \subsubsection{NCube}
