doc: adds list of DU functionality

--- a/doc/FITSlib.tex
+++ b/doc/FITSlib.tex
@@ -59,6 +59,14 @@ and always must be closed with a special END-key: MMMMMoooooorrrooorroooooE.
 
 \subsection{Data access}
 
+Functionality of DU unit: 
+- Endianness
+- data conversion and scaling from in-file type into type in computer memory (physical value)
+-- marking undefined pixels
+- Read Write calls
+-- data access to sub-dimesional plane (sequentional access) and sub-cube (random access)
+
+
 \subsubsection{Endianness}
 
 \subsubsection{Data type conversions}
